--- a/codeGen/build.gradle
+++ b/codeGen/build.gradle
@@ -15,8 +15,8 @@ dependencies {
   compileOnly "io.github.jklingsporn:vertx-jooq-generate:$JooqVertxVersion"
   //    代码生成
   implementation "io.vertx:vertx-codegen:$vertxVersion"
-  api group: 'org.jboss.forge.roaster', name: 'roaster-api', version: '2.22.3.Final'
-  api group: 'org.jboss.forge.roaster', name: 'roaster-jdt', version: '2.22.3.Final'
+  compile group: 'org.jboss.forge.roaster', name: 'roaster-api', version: '2.22.3.Final'
+  compile group: 'org.jboss.forge.roaster', name: 'roaster-jdt', version: '2.22.3.Final'
 }
 
 test {
