--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,6 @@ buildscript {
     classpath "org.postgresql:postgresql:$postgresqlVertsion"
     classpath "io.github.jklingsporn:vertx-jooq-generate:$JooqVertxVersion"
     classpath "io.vertx:vertx-codegen:$vertxVersion"
-    classpath "com.google.inject:guice:4.2.3"
   }
 }
 
@@ -76,45 +75,28 @@ subprojects {
 
 
   dependencies {
-    implementation group: 'org.apache.ignite', name: 'ignite-log4j2', version: '2.9.0'
-    "implementation"("org.apache.ignite:ignite-core:$igniteVersion")
-    implementation("org.apache.ignite:ignite-log4j:$igniteVersion")
-    "implementation"("org.apache.ignite:ignite-indexing:$igniteVersion")
-    "implementation"("io.vertx:vertx-ignite:$vertxVersion") {
+    //测试包
+    testImplementation "io.vertx:vertx-junit5:$vertxVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
+    //自定义工具包
+    compile "org.start2do:utils:0.0.1-SNAPSHOT"
+    //Jackson
+    compileOnly "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.10.2"
+    //集群
+    compileOnly group: 'org.apache.ignite', name: 'ignite-log4j2', version: '2.9.0'
+    compileOnly("org.apache.ignite:ignite-core:$igniteVersion")
+    compileOnly("org.apache.ignite:ignite-log4j:$igniteVersion")
+    compileOnly "org.apache.ignite:ignite-indexing:$igniteVersion"
+    compileOnly("io.vertx:vertx-ignite:$vertxVersion") {
       exclude group: "org.apache.ignite"
     }
-    "implementation"("io.vertx:vertx-zookeeper:$vertxVersion") {
+    compileOnly "com.fasterxml.jackson.core:jackson-databind:2.11.3"
+
+    compileOnly("io.vertx:vertx-zookeeper:$vertxVersion") {
       exclude group: "org.slf4j"
       exclude group: "log4j"
     }
-    "implementation"("org.reflections:reflections:0.9.12")
-    "implementation"("org.apache.logging.log4j:log4j-api:$log4jVersion")
-    "implementation"("org.apache.logging.log4j:log4j-core:$log4jVersion")
-    "implementation"("io.vertx:vertx-config:$vertxVersion")
-    "implementation"("io.vertx:vertx-circuit-breaker:$vertxVersion")
-    "implementation"("io.vertx:vertx-lang-kotlin:$vertxVersion")
-    "implementation"("io.vertx:vertx-config:$vertxVersion")
-    implementation group: 'io.vertx', name: 'vertx-lang-kotlin-coroutines', version: vertxVersion
-
-
-    testCompile "io.vertx:vertx-unit:$vertxVersion"
-    "testImplementation"("io.vertx:vertx-junit5:$vertxVersion")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
-    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlinVersion
-
-//    "implementation"("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion")
-    "implementation"("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7")
-    "implementation"("com.fasterxml.jackson.module:jackson-module-kotlin:2.10.2")
-    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.10.2"
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.11.3")
-    compile group: 'com.google.inject', name: 'guice', version: '4.2.3'
-
-    implementation "io.vertx:vertx-service-discovery:$vertxVersion"
-    implementation "io.vertx:vertx-service-proxy:$vertxVersion"
-    implementation "io.vertx:vertx-core:$vertxVersion"
-    compile "org.start2do:utils:0.0.1-SNAPSHOT"
-
   }
   def env = System.getProperty("env") ?: "dev"
   println "当前打包环境为:$env"
@@ -165,47 +147,10 @@ compileKotlin {
   destinationDir = file(out_path)
 }
 
-task buildProd {
-  System.setProperty("env", "prod")
-  ext {
-    env = "prod"
-  }
-  dependsOn ":vertx-core:kaptGenerateStubsKotlin"
-  dependsOn ":vertx-core:kaptKotlin"
-  dependsOn ":vertx-core:compileKotlin"
-  dependsOn ":vertx-core:compileJava"
-  dependsOn ":vertx-core:processResources"
-  dependsOn ":vertx-core:classes"
-  dependsOn ":api:jar"
-//
-  dependsOn ":api:kaptGenerateStubsKotlin"
-  dependsOn ":api:kaptKotlin"
-  dependsOn ":api:compileKotlin"
-  dependsOn ":api:compileJava"
-  dependsOn ":api:processResources"
-  dependsOn ":api:classes"
-  dependsOn ":api:jar"
-//
-  dependsOn ":db:kaptGenerateStubsKotlin"
-  dependsOn ":db:kaptKotlin"
-  dependsOn ":db:compileKotlin"
-  dependsOn ":db:compileJava"
-  dependsOn ":db:processResources"
-  dependsOn ":db:classes"
-  dependsOn ":db:shadowJar"
-//
-  dependsOn ":controller:kaptGenerateStubsKotlin"
-  dependsOn ":controller:kaptKotlin"
-  dependsOn ":controller:compileKotlin"
-  dependsOn ":controller:compileJava"
-  dependsOn ":controller:processResources"
-  dependsOn ":controller:classes"
-  dependsOn ":controller:shadowJar"
+task mavenInstall {
+  dependsOn ":vertx-core-api:install"
+  dependsOn ":vertx-core:install"
+  dependsOn ":vertx-db:install"
+  dependsOn ":vertx-web:install"
+  dependsOn ":codeGen:install"
 }
-
-task runDev {
-  dependsOn ":db:run"
-  dependsOn ":controller:run"
-}
-
-
