--- a/vertx-core/src/main/resources/config.sample.json
+++ b/vertx-core/src/main/resources/config.sample.json
@@ -38,5 +38,6 @@
     "org.start2do.vertx.service",
     "org.start2do.vertx.controller"
   ],
-  "serviceAddress": "service"
+  "serviceAddress": "service",
+  "eventLoopPoolSize": 20
 }
