--- a/codeGen/build.gradle
+++ b/codeGen/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   id 'java'
-  id 'maven'
+  id 'maven-publish'
+  id 'application'
 }
 
 group 'org.start2do'
@@ -14,7 +15,7 @@ repositories {
 dependencies {
   compileOnly "io.github.jklingsporn:vertx-jooq-generate:$JooqVertxVersion"
   //    代码生成
-  implementation "io.vertx:vertx-codegen:$vertxVersion"
+  compileOnly "io.vertx:vertx-codegen:$vertxVersion"
   compile group: 'org.jboss.forge.roaster', name: 'roaster-api', version: '2.22.3.Final'
   compile group: 'org.jboss.forge.roaster', name: 'roaster-jdt', version: '2.22.3.Final'
 }
@@ -22,7 +23,6 @@ dependencies {
 test {
   useJUnitPlatform()
 }
-
 application {
   mainClassName("org.start2do.vertx.utils.JavaCodeGenUtils")
 }
