--- a/vertx-core-api/build.gradle
+++ b/vertx-core-api/build.gradle
@@ -1,6 +1,6 @@
 plugins {
   id "java"
-  id "maven"
+  id "maven-publish"
 }
 
 group = "org.start2do"
@@ -24,9 +24,10 @@ sourceSets {
 }
 dependencies {
   annotationProcessor 'org.projectlombok:lombok:1.18.12'
-  kapt 'org.projectlombok:lombok:1.18.12'
-  compileOnly 'org.projectlombok:lombok:1.18.12'
+  compileOnly("org.projectlombok:lombok:1.18.12")
+  kapt("org.projectlombok:lombok:1.18.12")
   compileOnly "io.vertx:vertx-codegen:$vertxVersion"
+  compileOnly "io.vertx:vertx-core:$vertxVersion"
 }
 
 compileKotlin {
