--- a/vertx-db/build.gradle
+++ b/vertx-db/build.gradle
@@ -1,6 +1,6 @@
 plugins {
   id 'java'
-  id 'maven'
+  id 'maven-publish'
 }
 
 group 'org.start2do'
@@ -14,7 +14,7 @@ repositories {
 dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-  implementation(project(":vertx-core-api"))
+  compile(project(":vertx-core-api"))
   implementation(project(":vertx-core"))
   compile "org.flywaydb:flyway-core:6.5.2"
   compile "io.github.jklingsporn:vertx-jooq-classic-reactive:$JooqVertxVersion"
@@ -27,4 +27,3 @@ dependencies {
 test {
   useJUnitPlatform()
 }
-mainClassName = ''
