--- a/vertx-web/build.gradle
+++ b/vertx-web/build.gradle
@@ -1,6 +1,6 @@
 plugins {
   id 'java'
-  id 'maven'
+  id 'maven-publish'
 }
 
 group 'org.start2do'
@@ -12,8 +12,8 @@ repositories {
 }
 
 dependencies {
-  implementation(project(":vertx-core-api"))
-  implementation(project(":vertx-core"))
+  compile(project(":vertx-core-api"))
+  compile(project(":vertx-core"))
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
   annotationProcessor "io.vertx:vertx-web-api-service:${vertxVersion}"
@@ -27,4 +27,3 @@ dependencies {
 test {
   useJUnitPlatform()
 }
-mainClassName = ''
