--- a/vertx-mqtt/build.gradle
+++ b/vertx-mqtt/build.gradle
@@ -1,5 +1,7 @@
 plugins {
   id 'java'
+  id 'java-library'
+  id 'maven-publish'
 }
 
 group 'org.start2do'
@@ -13,11 +15,22 @@ repositories {
 dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-  compile "io.vertx:vertx-mqtt:$vertxVersion"
-  implementation(project(":vertx-core-api"))
-  implementation(project(":vertx-core"))
+  api "io.vertx:vertx-mqtt:$vertxVersion"
+  compileOnly(project(":vertx-core-api"))
+  compileOnly(project(":vertx-core"))
 }
 
 test {
   useJUnitPlatform()
+}
+
+publishing {
+  publications {
+    maven(MavenPublication) {
+      groupId = groupId
+      artifactId = project.name
+      version = version
+      from components.java
+    }
+  }
 }
