--- a/vertx-db/build.gradle
+++ b/vertx-db/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   id 'java'
   id 'maven-publish'
+  id 'java-library'
 }
 
 group 'org.start2do'
@@ -14,16 +15,26 @@ repositories {
 dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-  compile(project(":vertx-core-api"))
-  implementation(project(":vertx-core"))
-  compile "org.flywaydb:flyway-core:6.5.2"
-  compile "io.github.jklingsporn:vertx-jooq-classic-reactive:$JooqVertxVersion"
+  compileOnly(project(":vertx-core-api"))
+  compileOnly(project(":vertx-core"))
+  api "org.flywaydb:flyway-core:6.5.2"
+  api "io.github.jklingsporn:vertx-jooq-classic-reactive:$JooqVertxVersion"
   compileOnly "io.github.jklingsporn:vertx-jooq-generate:$JooqVertxVersion"
   compileOnly("io.vertx:vertx-pg-client:$vertxVersion")
-  compile group: 'io.vertx', name: 'vertx-lang-kotlin-coroutines', version: vertxVersion
-
+  implementation group: 'io.vertx', name: 'vertx-lang-kotlin-coroutines', version: vertxVersion
 }
 
 test {
   useJUnitPlatform()
+}
+
+publishing {
+  publications {
+    maven(MavenPublication) {
+      groupId = groupId
+      artifactId = project.name
+      version = version
+      from components.java
+    }
+  }
 }
