--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,14 @@ buildscript {
   ext {
     postgresqlVertsion = "42.2.14"
     JooqVertxVersion = "6.3.0"
-    kotlinVersion = "1.5.30"
-    vertxVersion = "4.1.4"
+    vertxVersion = '4.2.1'
     log4jVersion = "2.13.3"
-    junitJupiterVersion = "5.6.0"
-    javaVersion = "11"
+    db_url = "jdbc:postgresql://localhost:5432/demo"
+    db_user = "postgres"
+    db_password = "123"
+    out_path = "/Volumes/RamDisk/Caches/demo"
+    javaVersion = '16'
+    lombokVersion = '1.18.22'
   }
   repositories {
     mavenLocal()
@@ -98,8 +101,6 @@ subprojects {
   ext {
     set("out_path", out_path)
     set("vertxVersion", vertxVersion)
-    set("junitJupiterVersion", junitJupiterVersion)
-    set("kotlinVersion", kotlinVersion)
   }
   compileJava {
     sourceCompatibility = javaVersion
